# Chem-193

./: .buildinfo  .gitignore  LICENSE  README.md  genindex.html  hello.py  index.html  objects.inv  pyproject.toml  python-basics.html  python-basics.ipynb  search.html  searchindex.js  syllabus.html
.github/workflows/: sphinx.yml
_sources/: index.rst  syllabus.rst
assignments/1-python-basics/: main.ipynb  pyproject.toml
docs/: conf.py  index.rst  python-basics.ipynb  syllabus.rst
