[project]
name = "chem-193"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "nbsphinx>=0.9.6",
    "notebook>=7.3.2",
    "numpy>=2.2.1",
    "ruff>=0.7.1",
    "sphinx-book-theme>=1.1.3",
    "sphinx-copybutton>=0.5.2",
    "sphinx>=8.1.3",
]
